--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli-plugin-eslint": "^5.0.8",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "element-ui": "^2.15.14",
+    "sass": "^1.72.0",
+    "sass-loader": "^14.1.1",
+    "tailwindcss": "^3.4.1",
+    "vue": "^3.2.13",
+    "vue-youtube": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
