--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vue/cli-plugin-eslint": "^5.0.8",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.14",
+    "prettier": "^3.2.5",
     "sass": "^1.72.0",
     "sass-loader": "^14.1.1",
     "tailwindcss": "^3.4.1",
