--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vue/cli-plugin-eslint": "^5.0.8",
+    "aos": "^2.3.4",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.14",
     "prettier": "^3.2.5",
