--- a/package.json
+++ b/package.json
@@ -11,13 +11,10 @@
     "@vue/cli-plugin-eslint": "^5.0.8",
     "aos": "^2.3.4",
     "core-js": "^3.8.3",
-    "element-ui": "^2.15.14",
-    "prettier": "^3.2.5",
     "sass": "^1.72.0",
     "sass-loader": "^14.1.1",
     "tailwindcss": "^3.4.1",
-    "vue": "^3.2.13",
-    "vue-youtube": "^1.4.0"
+    "vue": "^3.2.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
