--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,7 +7,28 @@
     "paths": {
       "@/*": [
         "src/*"
-      ]
+      ],
+      "~": [
+        ".."
+      ],
+      "~/*": [
+        "../*"
+      ],
+      "@": [
+        ".."
+      ],
+      "~~": [
+        ".."
+      ],
+      "~~/*": [
+        "../*"
+      ],
+      "assets": [
+        "../assets"
+      ],
+      "assets/*": [
+        "../assets/*"
+      ],
     },
     "lib": [
       "esnext",
