--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "sass-loader": "^14.1.1",
         "tailwindcss": "^3.4.1",
         "vue": "^3.2.13",
-        "vue-router": "^4.3.0"
+        "vue-router": "^4.3.0",
+        "vue3-carousel": "^0.3.1"
     },
     "devDependencies": {
         "@babel/core": "^7.12.16",
