--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "aos": "^2.3.4",
         "core-js": "^3.8.3",
+        "element-plus": "^2.6.3",
         "sass": "^1.72.0",
         "sass-loader": "^14.1.1",
         "tailwindcss": "^3.4.1",
