--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "sass-loader": "^14.1.1",
         "tailwindcss": "^3.4.1",
         "vue": "^3.2.13",
+        "vue-lazyload": "^3.0.0",
         "vue-router": "^4.3.0",
         "vue3-carousel": "^0.3.1"
     },
