--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
         "build": "vue-cli-service build"
     },
     "dependencies": {
+        "@supabase/supabase-js": "^2.43.2",
         "aos": "^2.3.4",
         "core-js": "^3.8.3",
         "element-plus": "^2.6.3",
+        "filepond": "^4.31.1",
+        "lottie-web-vue": "^2.0.7",
         "sass": "^1.72.0",
         "sass-loader": "^14.1.1",
         "tailwindcss": "^3.4.1",
         "vue": "^3.2.13",
+        "vue-filepond": "^7.0.4",
         "vue-lazyload": "^3.0.0",
         "vue-router": "^4.3.0",
         "vue3-carousel": "^0.3.1"
