--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "tailwindcss": "^3.4.1",
         "vue": "^3.2.13",
         "vue-lazyload": "^3.0.0",
+        "vue-meta": "^3.0.0-alpha.7",
         "vue-router": "^4.3.0",
         "vue3-carousel": "^0.3.1"
     },
