--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "vue-lazyload": "^3.0.0",
         "vue-meta": "^3.0.0-alpha.7",
         "vue-router": "^4.3.0",
-        "vue3-carousel": "^0.3.1"
+        "vue3-carousel": "^0.3.1",
+        "watch": "^1.0.2"
     },
     "devDependencies": {
         "@babel/core": "^7.12.16",
