--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
         "vue-meta": "^3.0.0-alpha.7",
         "vue-router": "^4.3.0",
         "vue3-carousel": "^0.3.1",
-        "watch": "^1.0.2"
+        "watch": "^0.13.0"
     },
     "devDependencies": {
         "@babel/core": "^7.12.16",
         "@vue/cli-plugin-babel": "~5.0.0",
-        "@vue/cli-service": "~5.0.0"
+        "@vue/cli-service": "^5.0.8"
     }
 }
